implements missing IonReader/IonWriter; addresses linty build warnings